--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta charset="utf-8" />
-  <meta name="description" content="Offline experience" />
-  <meta name="keywords" content="offline, 404, not here" />
-  <meta name="author" content="linxea" />
+  <meta name="description" content="Melanie Linares front-end UX/UI developer" />
+  <meta name="keywords" content="melanie, melanie linares, developer, accessibility, front-end, front end, frontend, web, ux, ui, raleigh, insight" />
+  <meta name="author" content="Melanie Linares" />
   <title>Melanie Linares</title>
     
     <link rel="stylesheet" type="text/css" href="css/main.css">
