--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
   <meta name="description" content="Melanie Linares front-end UX/UI developer" />
   <meta name="keywords" content="melanie, melanie linares, developer, accessibility, front-end, front end, frontend, web, ux, ui, raleigh, insight" />
@@ -17,11 +18,11 @@
     <h1>Oh hello, <span id="msg"></span>!</h1>
     <p>I'm Melanie Linares a front-end UX/UI developer with a focus on accessibility, based in Raleigh, NC.</p>
     <ul>
-      <li>I am an Inclusion and Diversity Event Lead at <a href="https://www.insight.com">Insight</a></li>
+      <li>I am an Inclusion and Diversity Event Lead at <a href="https://www.insight.com" target="_blank" rel="noreferrer">Insight</a></li>
       <li>I am part of Insight’s global Accessibility and Inclusivity Design Team</li>
-      <li>I really like <b><span id="word">board games</span></b></li>
+      <li>I really like <b><span id="word" aria-label="board games, scruffy dogs, CMYK, papercraft, jazz, and dark chocolate">board games</span></b></li>
       <li>I'm currently having fun working with Vue.js and RESTful APIs</li>
-      <li><span class="bird" aria-label="You can find me on Twitter">🐦 </span><a href="https://twitter.com/MelDesignsStuff" target="_blank">@MelDesignsStuff</a></li>
+      <li><span class="bird" aria-label="You can find me on Twitter">🐦 </span><a href="https://twitter.com/MelDesignsStuff" target="_blank" rel="noreferrer">@MelDesignsStuff</a></li>
     </ul>
   </div>
     
