updating job title and current job

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div id="content">
       <span id="blink" class="image"></span>
     <h1>Oh hello, <span id="msg"></span>!</h1>
-    <p>I'm Melanie Linares a front-end UX/UI developer with a focus on accessibility, based in Raleigh, NC.</p>
+    <p>I'm Melanie Linares, an accessibility focused front-end developer based in Raleigh, NC.</p>
     <ul>
-      <li>I am an Inclusion and Diversity Event Lead at <a href="https://www.insight.com" target="_blank" rel="noreferrer">Insight</a></li>
-      <li>I am part of Insight’s global Accessibility and Inclusivity Design Team</li>
+      <li>I am a Senior Accessibility Analyst at <a href="https://www.levelaccess.com/" target="_blank" rel="noreferrer">Level Access</a></li>
+      <li>I am WAS certified from IAAP</li>
       <li>I really like <b><span id="word" aria-label="board games, scruffy dogs, CMYK, papercraft, jazz, and dark chocolate">board games</span></b></li>
       <li>I'm currently having fun working with Vue.js and RESTful APIs</li>
       <li><span class="bird" aria-label="You can find me on Twitter">🐦 </span><a href="https://twitter.com/MelDesignsStuff" target="_blank" rel="noreferrer">@MelDesignsStuff</a></li>
